Front - fix waste codes modal overflow

--- a/front/src/search/WasteTreeModal.scss
+++ b/front/src/search/WasteTreeModal.scss
@@ -1,3 +1,7 @@
 .modal.modal-large {
   max-width: 90%;
 }
+.tree {
+  max-height: 70vh;
+  overflow: auto;
+}
